--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="near_the">Near the</string>
     <!--Text to display if there are no earthquakes-->
     <string name="no_earthquakes">No earthquakes found.</string>
+    <string name="no_internet">No internet connection.</string>
 </resources>
